[package]
name = "launchkey_control"
version = "0.1.0"
authors = ["madprops <easywest@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
psutil = "1.7.0"
ctrlc = { version = "3.1.3", features = ["termination"] }